correccion de estilos

--- a/HistClin.html
+++ b/HistClin.html
@@ -8,15 +8,10 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header><h1>Editar historia clinica</h1>
+   </header>
 
-    <nav>
-        <ul class="nav">
-            <li><a href="index.html">Pagina Principal</a></li>
-        </ul>
-    </nav>
     
-
-    <h1>Editar historia clinica</h1>
     <label for="">Especialista</label><br>
     <input type="text"><br>
     <label for="">Nombre paciente</label><br>
@@ -30,6 +25,11 @@
     <label for="">Historia Clinica</label><br>
 <textarea name="" id="" cols="30" rows="10"></textarea><br>
 <input type="submit" value="Enviar"><br>
+<nav>
+    <ul class="nav">
+        <li><a href="index.html">Pagina Principal</a></li>
+    </ul>
+</nav>
 
 </body>
 
