--- a/paciente.html
+++ b/paciente.html
@@ -8,15 +8,10 @@
    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav>
-        <ul class="nav">
-            <li><a href="index.html">Atras</a></li>
-        </ul>
-    </nav>
     
-
+<header>
     <h1>reservar turno</h1>
- 
+</header>
     <form action="">
         <LAbel> ingrese nombre</LAbel><br> 
         <input type="text"><br>
@@ -31,7 +26,13 @@
             <option value="">Neurologo</option>
         </select>
         <br><input type="submit" value="Enviar"><br>
-    </form>    
+    </form>  
+    <nav>
+        <ul class="nav">
+            <li><a href="index.html">Atras</a></li>
+        </ul>
+    </nav>
+      
 </body>
 
 </html>
