--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 
 <body>
+    <header>
     <H1>Consultorio Medico</H1>
-<p> este es un consultorio medico preparado para la atencion de pacientes </p>
+<p> este es un sistema basado en un consultorio medico preparado para la atencion de pacientes </p></header>
 <nav class="menu">
     <ul class="nav">
         <li> <a href="medico.html">Menu de Medico</a> </li>
