--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <header>
     <H1>Consultorio Medico</H1>
-<p> este es un sistema basado en un consultorio medico preparado para la atencion de pacientes </p></header>
+<p> este es un sistema basado en un consultorio medico preparado para la atencion de pacientes </p>
 <nav class="menu">
     <ul class="nav">
         <li> <a href="medico.html">Menu de Medico</a> </li>
