--- a/medico.html
+++ b/medico.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <nav class="nav">
+    <nav class="nav-mov">
         <ul>
     <li><a href="HistClin.html">Menu Historia clinica</a></li>
     <li><a href="index.html">Atras</a><br></li>
