--- a/paciente.html
+++ b/paciente.html
@@ -28,7 +28,7 @@
         <br><input type="submit" value="Enviar"><br>
     </form>  
     <nav>
-        <ul class="nav">
+        <ul class="nav-mov">
             <li><a href="index.html">Atras</a></li>
         </ul>
     </nav>
