--- a/HistClin.html
+++ b/HistClin.html
@@ -26,7 +26,7 @@
 <textarea name="" id="" cols="30" rows="10"></textarea><br>
 <input type="submit" value="Enviar"><br>
 <nav>
-    <ul class="nav">
+    <ul class="nav-mov">
         <li><a href="index.html">Pagina Principal</a></li>
     </ul>
 </nav>
