--- a/index.html
+++ b/index.html
@@ -9,15 +9,17 @@
 </head>
 
 <body>
+    <div class="container">
     <header>
     <H1>Consultorio Medico</H1>
 <p> este es un sistema basado en un consultorio medico preparado para la atencion de pacientes </p>
 <nav class="menu">
+    <div>
     <ul class="nav">
         <li> <a href="medico.html">Menu de Medico</a> </li>
         <li> <a href="paciente.html">Menu de paciente</a> </li></ul>
 </nav>
-
-   
+</div>
+</div>
 </body>
 </html>
