--- a/medico.html
+++ b/medico.html
@@ -6,13 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Medico</title>
 <link rel="stylesheet" href="style.css">
-</head>
+
 <body>
+    <div class="container">
+       <header> <h1>Menu Medico</h1> </header>
+
     <nav class="nav-mov">
         <ul>
     <li><a href="HistClin.html">Menu Historia clinica</a></li>
     <li><a href="index.html">Atras</a><br></li>
 </ul>
 </nav>
+</div>
 </body>
 </html>
