--- a/paciente.html
+++ b/paciente.html
@@ -7,11 +7,12 @@
     <title>paciente</title>
    <link rel="stylesheet" href="style.css">
 </head>
-<body>
-    
+<body>+
+    <div class="container">
 <header>
     <h1>reservar turno</h1>
 </header>
+<div class="formu">
     <form action="">
         <LAbel> ingrese nombre</LAbel><br> 
         <input type="text"><br>
@@ -26,13 +27,16 @@
             <option value="">Neurologo</option>
         </select>
         <br><input type="submit" value="Enviar"><br>
-    </form>  
+    </form>
+</div> 
+    <div> 
     <nav>
         <ul class="nav-mov">
             <li><a href="index.html">Atras</a></li>
         </ul>
     </nav>
-      
+</div>
+</div>
 </body>
 
 </html>
