--- a/HistClin.html
+++ b/HistClin.html
@@ -10,8 +10,9 @@
 <body>
     <header><h1>Editar historia clinica</h1>
    </header>
-
-    
+<div class="container">
+    <div class="formu">
+        <form action="">
     <label for="">Especialista</label><br>
     <input type="text"><br>
     <label for="">Nombre paciente</label><br>
@@ -25,12 +26,16 @@
     <label for="">Historia Clinica</label><br>
 <textarea name="" id="" cols="30" rows="10"></textarea><br>
 <input type="submit" value="Enviar"><br>
+</form>
 <nav>
+</div>
+<div>
     <ul class="nav-mov">
         <li><a href="index.html">Pagina Principal</a></li>
     </ul>
 </nav>
-
+</div>
+</div>
 </body>
 
 </html>
