--- a/paciente.html
+++ b/paciente.html
@@ -7,7 +7,7 @@
     <title>paciente</title>
    <link rel="stylesheet" href="style.css">
 </head>
-<body>+
+<body>
     <div class="container">
 <header>
     <h1>reservar turno</h1>
