--- a/HistClin.html
+++ b/HistClin.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,22 +12,37 @@
     <header><h1>Editar historia clinica</h1>
    </header>
 <div class="container">
-    <div class="formu">
-        <form action="">
-    <label for="">Especialista</label><br>
-    <input type="text"><br>
-    <label for="">Nombre paciente</label><br>
-    <input type="text"><br>
-    <label for="">dni</label><br>
-    <input type="number"><br>
-    <label for="">telefono</label><br>
-    <input type="number"><br>
-    <label for="">direccion</label><br>
-    <input type="text"><br>
-    <label for="">Historia Clinica</label><br>
-<textarea name="" id="" cols="30" rows="10"></textarea><br>
-<input type="submit" value="Enviar"><br>
-</form>
+    <select class="form-select" aria-label="Default select example">
+    <option selected>Seleccione una especialidad</option>
+    <option value="">Sin especificar</option>         
+        <option value="">Clinico</option>
+        <option value="">Cardiologo</option>
+        <option value="">Nutricionista</option>
+        <option value="">Neurologo</option>
+  </select>
+    <div class="mb-3">
+        <label for="exampleFormControlInput1" class="form-label">Nombre Paciente</label>
+        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Nombre">
+      </div>
+      <div class="mb-3">
+        <label for="exampleFormControlInput1" class="form-label">DNI</label>
+        <input type="number" class="form-control" id="exampleFormControlInput1" placeholder="Dni">
+      </div>
+      <div class="mb-3">
+        <label for="exampleFormControlInput1" class="form-label">Numero de telefono</label>
+        <input type="number" class="form-control" id="exampleFormControlInput1" placeholder="Numero de telefono">
+      </div>
+      <div class="mb-3">
+        <label for="exampleFormControlInput1" class="form-label">Direccion</label>
+        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Nombre">
+      </div>
+      <div class="mb-3">
+        <label for="exampleFormControlTextarea1" class="form-label">Historia clinica</label>
+        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+      </div>
+
+
+    
 <nav>
 </div>
 <div>
@@ -36,6 +52,7 @@
 </nav>
 </div>
 </div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 
 </html>
