--- a/medico.html
+++ b/medico.html
@@ -4,19 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <title>Medico</title>
 <link rel="stylesheet" href="style.css">
 
 <body>
     <div class="container">
        <header> <h1>Menu Medico</h1> </header>
-
-    <nav class="nav-mov">
-        <ul>
-    <li><a href="HistClin.html">Menu Historia clinica</a></li>
-    <li><a href="index.html">Atras</a><br></li>
-</ul>
-</nav>
-</div>
+       <div class="card" style="width: 18rem;">
+        <img src="img/historia clinica.webp" class="card-img-top" alt="imagen menu paciente">
+        <div class="card-body">
+          <h5 class="card-title">Menu Historia clinica</h5>
+          <p class="card-text">Demo de las opciones que va a tener el Medico en su menu.</p>
+          <a href="HistClin.html" class="btn btn-primary">Menu Historia clinica</a>
+        </div>
+    
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 </body>
 </html>
