--- a/HistClin.html
+++ b/HistClin.html
@@ -14,7 +14,7 @@
 <div class="container">
     <select class="form-select" aria-label="Default select example">
     <option selected>Seleccione una especialidad</option>
-    <option value="">Sin especificar</option>         
+    <option id="especialista" value="">Sin especificar</option>         
         <option value="">Clinico</option>
         <option value="">Cardiologo</option>
         <option value="">Nutricionista</option>
@@ -22,19 +22,19 @@
   </select>
     <div class="mb-3">
         <label for="exampleFormControlInput1" class="form-label">Nombre Paciente</label>
-        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Nombre">
+        <input  type="text"  class="form-control" id="exampleFormControlInput1" placeholder="Nombre">
       </div>
       <div class="mb-3">
         <label for="exampleFormControlInput1" class="form-label">DNI</label>
-        <input type="number" class="form-control" id="exampleFormControlInput1" placeholder="Dni">
+        <input type="number" class="form-control" id="exampleFormControlInput2" placeholder="Dni">
       </div>
       <div class="mb-3">
         <label for="exampleFormControlInput1" class="form-label">Numero de telefono</label>
-        <input type="number" class="form-control" id="exampleFormControlInput1" placeholder="Numero de telefono">
+        <input type="number" class="form-control" id="exampleFormControlInput3" placeholder="Numero de telefono">
       </div>
       <div class="mb-3">
         <label for="exampleFormControlInput1" class="form-label">Direccion</label>
-        <input type="text" class="form-control" id="exampleFormControlInput1" placeholder="Nombre">
+        <input type="text" class="form-control" id="exampleFormControlInput4" placeholder="Direccion Paciente">
       </div>
       <div class="mb-3">
         <label for="exampleFormControlTextarea1" class="form-label">Historia clinica</label>
@@ -53,6 +53,7 @@
 </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+<script src="HistClin.js"></script>
 </body>
 
 </html>
