--- a/paciente.html
+++ b/paciente.html
@@ -16,17 +16,17 @@
     </header>
     <div class="input-group mb-4">
         <span class="input-group-text" id="basic-addon1">Ingrese nombre</span>
-        <input type="text" class="form-control" placeholder="Nombre y apellido" required aria-label="Username" aria-describedby="basic-addon1">
+        <input id="nombre" type="text" class="form-control" placeholder="Nombre y apellido" required aria-label="Username" aria-describedby="basic-addon1">
       </div>
       
       <div class="input-group mb-4">
         <span class="input-group-text" id="basic-addon1">Ingrese n° de documento</span>
-        <input type="number" required class="form-control" placeholder="DNI" aria-label="Username" aria-describedby="basic-addon1">
+        <input id="dni" type="number" required class="form-control" placeholder="DNI" aria-label="Username" aria-describedby="basic-addon1">
       </div>
 
       <div class="input-group mb-4">
         <span class="input-group-text" id="basic-addon2">Ingrese fecha de turno</span>
-        <input type="date" class="form-control" >
+        <input id="fecha" type="date" class="form-control" >
         <br>
         <br>
 
@@ -34,7 +34,7 @@
       
       <select class="form-select" aria-label="Default select example">
         <option selected>Seleccione una especialidad</option>
-        <option value="">Sin especificar</option>         
+        <option id="especialista" value="">Sin especificar</option>         
             <option value="">Clinico</option>
             <option value="">Cardiologo</option>
             <option value="">Nutricionista</option>
@@ -51,6 +51,7 @@
 </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+<script src="paciente.js"></script>
 </body>
 
 
