--- a/paciente.html
+++ b/paciente.html
@@ -40,7 +40,8 @@
             <option value="">Nutricionista</option>
             <option value="">Neurologo</option>
       </select>
-      <br><input type="submit" value="Enviar"><br>
+      <br>
+      <button id="boton">cargar datos</button>
       </div>
     
     <nav>
