--- a/paciente.html
+++ b/paciente.html
@@ -41,9 +41,11 @@
             <option value="">Neurologo</option>
       </select>
       <br>
-      <button id="boton">cargar datos</button>
+      <button id="agregarVisita">Agregar Visita</button>
       </div>
-    
+    <ul id="todo_list">
+  
+</ul>
     <nav>
         <ul class="nav-mov">
             <li><a href="index.html">Atras</a></li>
@@ -52,7 +54,37 @@
 </div>
 </div>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-<script src="paciente.js"></script>
+<script>
+   var parafo=document.getElementsByTagName("p")
+ 
+  var pacientes=[
+    "Juan",
+    "Pedro",
+    "Lucas",
+  ];
+  var todoList=document.querySelector("#todo_list");
+
+function agregarTarea(tarea,id) {
+  var li=document.createElement("li");
+  
+   li.textContent=tarea;
+if(id){
+  li.id=id;
+}  
+
+  todoList.appendChild(li);
+}
+
+   for(var i=0; i< pacientes.length;i+=1){
+                var paciente=pacientes[i];
+                agregarTarea(paciente,"elemento_"+i)
+            };
+            var agregarBoton=document.getElementById("agregarVisita");
+             agregarBoton.addEventListener("click",function(){
+var todoValue=document.getElementById("nombre").value;
+agregarTarea(todoValue);
+            });
+</script>
 </body>
 
 
