--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 </head>
 
 <body>
+  
     <header><h1>Consultorio medico</h1>
+      <time>hora</time>
         <p> este es un sistema basado en un consultorio medico preparado para la atencion de pacientes </p>
     </header>
 
